src/objects/DML_Controller__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>DML_LogGroup__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Log Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DML_LogKeys__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Log Keys</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DML_RetryAttempts__c</fullName>
        <label>Retry Attempts</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DML_RetryKeys__c</fullName>
        <description>Key words on error that will trigger retry automaticly</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Retry Keys</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <description>Stores Comma Separated Object API Names</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DML Controller</label>
</CustomObject>